fix: header margin on mobile version

--- a/src/app/mobile-header/mobile-header.component.scss
+++ b/src/app/mobile-header/mobile-header.component.scss
@@ -10,22 +10,24 @@
   height: 100px;
   border-radius: 50%;
   object-fit: cover;
-  margin-bottom: 20px;
   border: 5px solid $accent;
 }
 
 .header {
+  align-items: center;
   display: flex;
   gap: 2rem;
 }
 
 .name {
+  margin: 0;
   color: $accent;
   font-weight: bold;
   display: block;
 }
 
 .job-title {
+  margin: 0;
   position: relative;
 }
 
@@ -41,7 +43,7 @@
 .other-infos {
   display: flex;
   gap: 1rem;
-  margin-top: 1rem;
+  margin-top: 2rem;
   align-items: center;
   justify-content: space-between;
   width: 95%;
